--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -16,8 +16,8 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: gas-ci-${{ github.ref }}
-  cancel-in-progress: true
+  group: ${{ format('{0}-{1}', github.workflow, github.event.pull_request.number || github.ref_name || github.run_id) }}
+  cancel-in-progress: false
 
 defaults:
   run:
@@ -108,8 +108,7 @@ jobs:
           set -euo pipefail
           BASE="${BASE_URL:-}"
           PATH_INPUT="${PATH_INPUT:-}"
-          if printf '%s' "$BASE" | grep -qE '^https://script\.google\.com/.*/exec/?$' && \
-             printf '%s' "$PATH_INPUT" | grep -qE '^/exec(/|\?|$)'; then
+          if [[ ("$BASE" == */exec || "$BASE" == */exec/) && -n "$PATH_INPUT" && "$PATH_INPUT" == /* ]]; then
             echo "::error::E2E_PATH should be query-only when base ends with /exec (use \"?route=...\")"
             exit 1
           fi
@@ -119,7 +118,7 @@ jobs:
 
       - name: Auto-repair remote E2E (requires auth)
         if: ${{ env.HAS_REMOTE_TEST == 'true' }}
-        run: node scripts/auto-repair.mjs --run "npm run e2e:remote" --verify "npm run health"
+        run: node scripts/auto-repair.mjs --run "npm run e2e:remote" --verify "node scripts/health-check.mjs"
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
           E2E_PATH: ${{ env.E2E_PATH }}
@@ -132,28 +131,25 @@ jobs:
 
       - name: Health check (200/302 or skip)
         if: ${{ env.HAS_WEBAPP_URL == 'true' }}
-        run: npm run health
+        run: node scripts/health-check.mjs
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
           E2E_PATH: ${{ env.E2E_PATH }}
           E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
 
-      - name: Build artifact index
-        if: always()
-        run: node scripts/build-artifact-index.mjs
-        env:
-          ARTIFACT_SOURCES: |
-            playwright-report
-            artifacts
-          ARTIFACT_INDEX_PATH: artifacts/index.json
-
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: playwright-report
-          path: |
-            playwright-report
-            artifacts/index.json
+          name: playwright-report-${{ github.job }}
+          path: artifacts/playwright-report
+          if-no-files-found: ignore
+
+      - name: Upload health artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: health-check-${{ github.job }}
+          path: artifacts/health*.json
           if-no-files-found: ignore
 
       - name: "Install latest clasp"
