--- a/.github/workflows/npm-outdated.yml
+++ b/.github/workflows/npm-outdated.yml
@@ -28,8 +28,8 @@ jobs:
     name: Generate outdated inventory
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.workflow }}:${{ github.job }}:${{ github.ref }}
-      cancel-in-progress: false
+      group: ${{ format('{0}-{1}', github.workflow, github.ref_name || github.run_id) }}
+      cancel-in-progress: true
     env:
       RUN_LOCAL_E2E: ${{ format('{0}', github.event_name == 'workflow_dispatch' && inputs.run_e2e) }}
     steps:
@@ -60,8 +60,8 @@ jobs:
         if: ${{ always() && env.RUN_LOCAL_E2E == 'true' }}
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
-          path: playwright-report
+          name: playwright-report-${{ github.job }}
+          path: artifacts/playwright-report
           if-no-files-found: ignore
 
       - name: Generate outdated.json
