--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "lint": "eslint --max-warnings=0 --no-error-on-unmatched-pattern --ext .js,.cjs,.mjs,.ts,.tsx src __tests__ playwright scripts",
     "format": "prettier --check .",
     "typecheck": "tsc --project tsconfig.test.json --noEmit",
-    "test": "npm run test:url-helper && jest --config=jest.config.cjs",
-    "test:watch": "jest --watch --config=jest.config.cjs",
-    "test:url-helper": "node --test tests/url-helper.node.test.mjs",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.cjs",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch --config=jest.config.cjs",
     "test:playwright": "playwright test",
     "e2e:ui": "cross-env E2E_TARGET=local playwright test --grep @ui",
     "e2e:remote": "cross-env E2E_TARGET=remote playwright test --grep @remote",
     "e2e": "npm run e2e:ui && npm run e2e:remote",
     "test:a11y:pa11y": "node scripts/run-pa11y.mjs",
-    "test:a11y:jest": "jest --config=jest.config.cjs --runTestsByPath __tests__/a11y/sidebar-a11y.test.ts",
+    "test:a11y:jest": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.cjs --runTestsByPath __tests__/a11y/sidebar-a11y.test.ts",
     "health": "node scripts/health-check.mjs",
     "check": "npm-run-all lint test e2e test:a11y:pa11y test:a11y:jest health",
     "build": "echo \"No build step configured\"",
@@ -30,36 +29,34 @@
     "*.{json,md,html,css,scss}": "prettier --write"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.14.0",
-    "@google/clasp": "^2.5.0",
+    "@jest/globals": "^30.2.0",
     "@playwright/test": "1.55.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.9.3",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
+    "cross-env": "^7.0.3",
+    "depcheck": "1.4.7",
     "dotenv": "^16.4.7",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-playwright": "^2.2.2",
     "globals": "^15.11.0",
+    "googleapis": "^148.0.0",
     "husky": "^9.1.7",
-    "cross-env": "^7.0.3",
     "jest": "^30.2.0",
     "jest-axe": "^9.0.0",
     "jest-environment-jsdom": "30.2.0",
-    "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
     "pa11y": "9.0.1",
-    "pa11y-ci": "^4.0.1",
     "prettier": "^3.3.3",
-    "puppeteer": "^24.22.3",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "undici": "^6.20.1"
   },
   "overrides": {
     "glob": "^10.4.5",
